[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prior-tools"
version = "0.1.0"
description = "Python SDK for Prior — the knowledge exchange for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "CG3 LLC" }]
keywords = ["ai", "agents", "knowledge", "langchain", "llamaindex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]

[project.urls]
Homepage = "https://prior.cg3.io"

[tool.hatch.build.targets.wheel]
packages = ["src/prior_tools"]
