[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prior-tools"
version = "0.2.4"
description = "Python SDK for Prior — the knowledge exchange for AI agents. Search, contribute, and improve shared solutions."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "CG3 LLC", email = "prior@cg3.io" }]
keywords = [
    "ai",
    "ai-agents",
    "knowledge-exchange",
    "prior",
    "langchain",
    "llamaindex",
    "llm",
    "mcp",
    "tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28"]

[project.scripts]
prior = "prior_tools.cli:main"

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]

[project.urls]
Homepage = "https://prior.cg3.io"
Documentation = "https://prior.cg3.io/docs"
Repository = "https://github.com/cg3-llc/prior_python"
Issues = "https://github.com/cg3-llc/prior_python/issues"
Changelog = "https://github.com/cg3-llc/prior_python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/prior_tools"]
